Third version Fully reactive - both rest and hibernate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ org.acme.BeerService/mp-rest/url=https://api.punkapi.com
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = postgres
 quarkus.datasource.password =
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/postgres
+quarkus.datasource.reactive.url = vertx-reactive:postgresql://localhost:5432/postgres
 
 quarkus.hibernate-orm.database.generation=drop-and-create
